2023-07-04T00:45:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5449661003 # 1693
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&until=2023-07-05
* notice: last 14d: unq all: 8 15
* notice: prev accum: outdated-unq outdated-all / unq all: 502 1332 / 513 1351
* notice: next accum: outdated-unq outdated-all / unq all: 505 1336 / 513 1351
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-06-19] / []

2022-12-08T01:07:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3644266402 # 1100
* notice: last 14d: unq all: 5 8
* notice: prev accum: outdated-unq outdated-all / unq all: 302 787 / 306 792
* notice: next accum: outdated-unq outdated-all / unq all: 302 787 / 307 795
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2022-12-07]

2022-12-07T01:09:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3634901556 # 1097
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 302 787 / 304 790
* notice: next accum: outdated-unq outdated-all / unq all: 302 787 / 306 792
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-12-06]

2022-12-06T01:06:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3625461915 # 1094
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 301 786 / 304 790
* notice: next accum: outdated-unq outdated-all / unq all: 302 787 / 304 790
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-21] / []

2022-12-02T16:18:25Z: