@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-04T00:45:00Z",
-  "count_outdated" : 1336,
-  "uniques_outdated" : 505,
-  "count" : 1351,
-  "uniques" : 513,
+  "timestamp" : "2023-07-04T08:10:24Z",
+  "count_outdated" : 1337,
+  "uniques_outdated" : 506,
+  "count" : 1352,
+  "uniques" : 514,
   "views" : [
-    {
-      "timestamp": "2023-06-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-06-21T00:00:00Z",
       "count": 3,
@@ -64,6 +55,15 @@
       "count": 3,
       "count_minmax": [ 3, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
