@@ -3,11 +3,6 @@
   "uniques": 8,
   "views": [
     {
-      "timestamp": "2023-06-20T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-06-21T00:00:00Z",
       "count": 3,
       "uniques": 1
@@ -35,6 +30,11 @@
     {
       "timestamp": "2023-07-02T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-04T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
